fix ui element spacing that relies on whitespace

--- a/less/components/checkout-info.less
+++ b/less/components/checkout-info.less
@@ -46,8 +46,14 @@
     margin-bottom: 10px;
   }
 
-  .form-group.expiration {
-    vertical-align: middle;
+  .form-group-expiration {
+    font-size: 0;
+    .control-separator {
+      display: inline-block;
+      margin: 0 4px;
+      vertical-align: middle;
+      font-size: 14px;
+    }
   }
 
   .form-group-member-name {
