--- a/less/components/item-tiles.less
+++ b/less/components/item-tiles.less
@@ -41,11 +41,14 @@
 .item-tile .item-tile-actions {
   float: right;
   margin-top: -40px;
+  // Remove whitespace
+  font-size: 0;
 }
 
 .item-tile .btn-remove,
 .item-tile .btn-add {
   #components > .btn-size( 36px, 12px, 1px, 1px, 14px );
+  margin-left: 6px;
 }
 
 .item-tile.is-in-cart {
